name:                pure-xss-sanitize
version:             0.8.0.0
homepage:            purehs.org/doc/pure-xss-sanitize
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-xss-sanitize.git

library
  build-depends:
    base,
    containers,
    pure-txt,
    pure-core,
    xss-sanitize

  hs-source-dirs: src

  exposed-modules:
    Pure.Data.View.SanitizeXSS

  default-language: Haskell2010
